--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_note"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_note"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyRoutine">
         <activity android:name="com.gba.myroutine.ui.activity.MainActivity">
